--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="container">GUSI.COM</h1>
-    <img src="images/maionezi.jfif" alt="" />
+    <img class="maionezi" src="images/maionezi.jfif" alt="" />
     <img class="gusi" src="images/gusi.jpg" alt="" />
     <img class="ky" src="images/ky.jpg" alt="" />
     <img class="vedro" src="images/vedro.webp" alt="" />
